# cardano-balance-transaction

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  NOTICE  PLAN.md  README.md  WIP.md  cabal.project  cardano-balance-tx.cabal  flake.nix  index.html  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
.specify/memory/: constitution.md
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md  modules.md  plan.md
getting-started/: index.html
lib/Cardano/Balance/Tx/: Balance.hs  Eras.hs  Gen.hs  Primitive.hs  Redeemers.hs  Sign.hs  SizeEstimation.hs  TimeTranslation.hs  Tx.hs  TxWithUTxO.hs  UTxOAssumptions.hs
lib/Cardano/Balance/Tx/Balance/: CoinSelection.hs  Surplus.hs  TokenBundleSize.hs
lib/Cardano/Balance/Tx/Primitive/: Convert.hs  Gen.hs
lib/Cardano/Balance/Tx/TxWithUTxO/: Gen.hs
modules/: index.html
nix/: project.nix
scripts/: check-no-cardano-api.sh
search/: search_index.json
specs/001-dijkstra-recent-era/: plan.md  research.md  spec.md  tasks.md
specs/001-dijkstra-recent-era/checklists/: requirements.md
specs/002-remove-cardano-api/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-remove-cardano-api/checklists/: requirements.md
specs/003-bump-node-10-7-0/: data-model.md  plan.md  research.md  spec.md  tasks.md
test/data/balanceTx/babbage/pingPong_2/: golden
test/data/balanceTx/conway/pingPong_2/: actual
test/data/balanceTx/dijkstra/binary/testPParams/: golden
test/data/balanceTx/dijkstra/delegate/: actual
test/spec/: run-test-suite.hs
test/spec/Cardano/Api/: Gen.hs
test/spec/Cardano/Balance/Tx/: BalanceSpec.hs  SerializationSpec.hs  TxSpec.hs
test/spec/Cardano/Balance/Tx/Balance/: CoinSelectionSpec.hs  SurplusSpec.hs  TokenBundleSizeSpec.hs
test/spec/Cardano/Ledger/Credential/: Safe.hs
test/spec/System/Random/: StdGenSeed.hs
test/spec/Test/Hspec/: Extra.hs
test/spec/Test/QuickCheck/: Extra.hs
test/spec/Test/Utils/: Laws.hs  Paths.hs  Pretty.hs
