cabal-version: 3.0
name:          cardano-balance-tx
version:       0.1.0
synopsis:      Balancing transactions for the Cardano blockchain.
description:   Please see README.md.
homepage:
  https://github.com/cardano-foundation/cardano-balance-transaction

author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2018-2022 IOHK, 2023-2026 Cardano Foundation
license:       Apache-2.0
category:      Blockchain, Cardano, Transactions
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , base                         >=4.14      && <5
    , bytestring                   >=0.10.6    && <0.13
    , cardano-addresses            >=4.0.2     && <4.1
    , cardano-api                  >=10.16.0.0 && <10.17
    , cardano-coin-selection
    , cardano-crypto-class         ^>=2.2.3
    , cardano-ledger-allegra       >=1.7.0.0   && <1.8
    , cardano-ledger-alonzo        >=1.13.0.0  && <1.14
    , cardano-ledger-api           >=1.11.0.0  && <1.12
    , cardano-ledger-babbage       >=1.11.0.0  && <1.12
    , cardano-ledger-binary
    , cardano-ledger-conway        >=1.19.0.0  && <1.20
    , cardano-ledger-core          >=1.17.0.0  && <1.18
    , cardano-ledger-mary          >=1.8.0.0   && <1.9
    , cardano-ledger-shelley       >=1.16.0.0  && <1.17
    , cardano-slotting             >=0.2.0.0   && <0.3
    , cardano-strict-containers    >=0.1.3.0   && <0.2
    , cborg                        >=0.2.1     && <0.3
    , containers                   >=0.5       && <0.8
    , deepseq                      >=1.4.4     && <1.6
    , fmt                          >=0.6.3     && <0.7
    , generic-lens                 >=2.2.2.0   && <2.3
    , groups                       >=0.5.3     && <0.6
    , int-cast                     >=0.2.0.0   && <0.3
    , lens                         >=5.2.3     && <5.4
    , MonadRandom                  >=0.6       && <0.7
    , monoid-subclasses            >=1.2.5.1   && <1.3
    , nonempty-containers          >=0.3.4.5   && <0.4
    , ouroboros-consensus          >=0.27.0.0  && <0.28
    , ouroboros-consensus-cardano  >=0.25.0.0  && <0.26
    , pretty-simple                >=4.1.2.0   && <4.2
    , QuickCheck                   >=2.14      && <2.16.0
    , serialise                    >=0.2.6.1   && <0.3
    , text                         >=1.2       && <2.2
    , transformers                 >=0.6.1.0   && <0.7

  exposed-modules:
    Cardano.Balance.Tx.Balance
    Cardano.Balance.Tx.Balance.CoinSelection
    Cardano.Balance.Tx.Balance.Surplus
    Cardano.Balance.Tx.Balance.TokenBundleSize
    Cardano.Balance.Tx.Eras
    Cardano.Balance.Tx.Gen
    Cardano.Balance.Tx.Primitive
    Cardano.Balance.Tx.Primitive.Convert
    Cardano.Balance.Tx.Primitive.Gen
    Cardano.Balance.Tx.Redeemers
    Cardano.Balance.Tx.Sign
    Cardano.Balance.Tx.SizeEstimation
    Cardano.Balance.Tx.TimeTranslation
    Cardano.Balance.Tx.Tx
    Cardano.Balance.Tx.TxWithUTxO
    Cardano.Balance.Tx.TxWithUTxO.Gen
    Cardano.Balance.Tx.UTxOAssumptions

test-suite unit
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/spec test/data
  main-is:            run-test-suite.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-balance-tx
    , cardano-binary
    , cardano-coin-selection
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-test
    , cardano-crypto-wrapper
    , cardano-ledger-alonzo
    , cardano-ledger-alonzo:testlib
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-babbage:testlib
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-byron-test
    , cardano-ledger-conway
    , cardano-ledger-conway:testlib
    , cardano-ledger-core
    , cardano-ledger-core:testlib
    , cardano-ledger-mary
    , cardano-ledger-mary:testlib
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , cborg
    , containers
    , data-default
    , directory
    , file-embed
    , filepath
    , fmt
    , generic-lens
    , generics-sop
    , groups
    , hedgehog-quickcheck
    , hspec
    , hspec-core
    , hspec-golden
    , int-cast
    , iproute
    , lens
    , memory
    , MonadRandom
    , monoid-subclasses
    , network
    , nonempty-containers
    , OddWord
    , ordered-containers
    , ouroboros-consensus
    , ouroboros-network-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , pretty-show
    , QuickCheck
    , quickcheck-classes
    , quickcheck-instances
    , quiet
    , random
    , sop-extras
    , splitmix
    , template-haskell
    , text
    , time
    , transformers

  -- Cardano ecosystem (all from CHaP / Hackage)
  -- Haskell ecosystem (all from Hackage)
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Cardano.Api.Gen
    Cardano.Balance.Tx.Balance.CoinSelectionSpec
    Cardano.Balance.Tx.Balance.SurplusSpec
    Cardano.Balance.Tx.Balance.TokenBundleSizeSpec
    Cardano.Balance.Tx.BalanceSpec
    Cardano.Balance.Tx.TxSpec
    Cardano.Ledger.Credential.Safe
    Spec
    System.Random.StdGenSeed
    Test.Hspec.Extra
    Test.QuickCheck.Extra
    Test.Utils.Laws
    Test.Utils.Paths
    Test.Utils.Pretty
